--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -48,7 +48,11 @@ jobs:
 
       - name: Create New Branch and Commit Build Result
         run: |
+          echo "Test - 1"
+          ls
           cd second_repo
+          echo "Test - 2"
+          ls
           git config user.email "actions@github.com"
           git config user.name "[Bot] GitHub Actions"
           git checkout -b React-Front_$(date +'%Y.%m.%d.%H.%M.%S')
