--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Create Pull Request
         uses: repo-sync/pull-request@v2
         with:
+          repository: ${{ env.REPO }}
           source_branch: ${{ env.BRANCH_NAME }}
           destination_branch: "main"
           github_token: ${{ env.GITHUB_TOKEN }}
