--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -75,16 +75,5 @@ jobs:
           repository: ${{ env.REPO }}
 
       - name: Create pull request
-        uses: car-on-sale/action-pull-request-another-repo@v1.3.1
-        env:
-          API_TOKEN_GITHUB: ${{ env.GITHUB_TOKEN }}
-        with:
-          source_folder: 'second_repo'
-          destination_repo: '${{ env.REPO }}'
-          destination_folder: 'second_repo'
-          destination_base_branch: 'main'
-          destination_head_branch: '${{ env.BRANCH_NAME }}'
-          user_email: 'actions@github.com'
-          user_name: '[Bot] GitHub Actions'
-          pr_title: ${{ env.PR_TITLE }}
-          pr_body: ${{ env.PR_BODY }}
+        run: |
+          gh pr create --title "${{ env.PR_TITLE }}" --body "${{ env.PR_BODY }}" --head "${{ env.BRANCH_NAME }}" --base "main"
