--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -75,5 +75,16 @@ jobs:
           repository: ${{ env.REPO }}
 
       - name: Create pull request
-        run: |
-          gh pr create --title "${{ env.PR_TITLE }}" --body "${{ env.PR_BODY }}" --head "${{ env.BRANCH_NAME }}" --base "main"
+        uses: haiiliin/action-pull-request-another-repo@v1.0.3
+        env:
+          API_TOKEN_GITHUB: ${{ env.GITHUB_TOKEN }}
+        with:
+          source_folder: 'second_repo'
+          destination_repo: '${{ env.REPO }}'
+          destination_folder: 'second_repo'
+          destination_base_branch: 'main'
+          destination_head_branch: '${{ env.BRANCH_NAME }}'
+          user_email: 'actions@github.com'
+          user_name: '[Bot] GitHub Actions'
+          pr_title: ${{ env.PR_TITLE }}
+          pr_body: ${{ env.PR_BODY }}
