--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Create New Branch and Commit Build Result
         run: |
           cd second_repo
+          git pull
           git config user.email "actions@github.com"
           git config user.name "[Bot] GitHub Actions"
           git checkout -b React-Front_$(date +'%Y.%m.%d.%H.%M.%S')
