--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -24,6 +24,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ env.GITHUB_TOKEN }}
 
       - name: Generate new branch name
         run: |
@@ -44,6 +46,7 @@ jobs:
       - name: Checkout repository 2
         uses: actions/checkout@v3
         with:
+          token: ${{ env.GITHUB_TOKEN }}
           repository: ${{ env.REPO }}
           path: second_repo
 
