--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -15,7 +15,7 @@ permissions:
   pull-requests: write
 
 env:
-  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GDSC_WEBSITE }}
   REPO : "Google-DSC-Kookmin/Google-DSC-Kookmin.github.io"
 
 jobs:
